--- a/contacto.html
+++ b/contacto.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Artesanías Chic - Contacto</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mente Sana | Contacto</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <h1>Artesanías Chic</h1>
-    <p>Accesorios artesanales hechos con amor y estilo único</p>
-</header>
-
-<nav>
-    <a href="index.html">Página de inicio</a>
-    <a href="tienda.html">Tienda en línea</a>
-    <a href="contacto.html">Página de contacto</a>
-</nav>
-
-<main id="contacto">
-    <section>
-        <h2>Contáctanos</h2>
-        <p>¿Tienes preguntas o quieres hacer un pedido personalizado? Escríbenos.</p>
-        <ul>
-            <li>Email: <a href="mailto:contacto@artesaniaschic.com">contacto@artesaniaschic.com</a></li>
-            <li>Instagram: <a href="https://instagram.com/artesaniaschic" target="_blank">@artesaniaschic</a></li>
-            <li>Facebook: <a href="https://facebook.com/artesaniaschic" target="_blank">Artesanías Chic</a></li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">🧠 Mente Sana</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda en línea</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
+      </div>
+    </div>
+  </nav>
 
-        <form action="#" method="post" onsubmit="alert('Gracias por contactarnos, te responderemos pronto!'); return false;">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required />
-
-            <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required />
-
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
-            <button type="submit">Enviar</button>
+  <main class="container py-5">
+    <h1 class="text-center mb-4">Contáctanos</h1>
+    <p class="text-center mb-5">Si tienes dudas o quieres más información, contáctanos a través de los siguientes medios:</p>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <ul class="list-group mb-4">
+          <li class="list-group-item"><strong>Email:</strong> contacto@mentesana.com</li>
+          <li class="list-group-item"><strong>Instagram:</strong> @mentesana_terapia</li>
+          <li class="list-group-item"><strong>Facebook:</strong> Mente Sana Psicoterapia</li>
+          <li class="list-group-item"><strong>WhatsApp:</strong> +1 (555) 123-4567</li>
+        </ul>
+        <form>
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico:</label>
+            <input type="email" class="form-control" id="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje:</label>
+            <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
-    </section>
-</main>
+      </div>
+    </div>
+  </main>
 
-<footer>
-    <p>© 2025 Artesanías Chic - Todos los derechos reservados</p>
-</footer>
+  <footer class="bg-dark text-light text-center py-3">
+    &copy; 2025 Mente Sana. Todos los derechos reservados.
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
