--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="img/hero1.jpg" class="d-block w-100" alt="Bienestar emocional">
         </div>
         <div class="carousel-item">
-      <img src="./images/mi_imagen1.png" alt="Descripción">  alt="Sesiones de terapia">
+      <img src="./img/mi_imagen1.png" alt="Descripción">  alt="Sesiones de terapia">
         </div>
         <div class="carousel-item">
           <img src="img/hero3.jpg" class="d-block w-100" alt="Talleres grupales">
