--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/hero1.jpg" class="d-block w-100" alt="Bienestar emocional">
+          <img src="./img/hero1.jpg" alt="Descripción"  alt="Bienestar emocional">
         </div>
         <div class="carousel-item">
-      <img src="./img/mi_imagen1.png" alt="Descripción">  alt="Sesiones de terapia">
+      <img src="./img/mi_imagen1.png" alt="Descripción"  alt="Sesiones de terapia">
         </div>
         <div class="carousel-item">
           <img src="img/hero3.jpg" class="d-block w-100" alt="Talleres grupales">
