--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/hero1.jpg" alt="Descripción"  alt="Bienestar emocional">
+          <img src="./img/héroe1.jpg.png" alt="Descripción"  alt="Bienestar emocional">
         </div>
         <div class="carousel-item">
       <img src="./img/mi_imagen1.png" alt="Descripción"  alt="Sesiones de terapia">
