--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/héroe1.jpg.png" alt="Descripción"  alt="Bienestar emocional">
+          <img src="./img/heroe1.jpg.png" alt="Descripción"  alt="Bienestar emocional">
         </div>
         <div class="carousel-item">
       <img src="./img/mi_imagen1.png" alt="Descripción"  alt="Sesiones de terapia">
         </div>
         <div class="carousel-item">
-          <img src="img/hero3.jpg" class="d-block w-100" alt="Talleres grupales">
+          <img src="img/talleres.jpg" class="d-block w-100" alt="Talleres grupales">
         </div>
       </div>
     </div>
