--- a/tienda.html
+++ b/tienda.html
@@ -33,7 +33,7 @@
             <p class="card-text">Apoyo terapéutico individualizado para tu bienestar emocional.</p>
             <p><strong>$50 USD</strong></p>
             <div class="d-flex justify-content-between">
-              <a href="https://wa.me/15551234567?text=Quiero%20reservar%20una%20sesión%20de%20psicoterapia" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
+              <a href="https://w.app/mentesana" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
               <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
             </div>
           </div>
