--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mente Sana | Inicio</title>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- AOS para animaciones -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Tu CSS personalizado -->
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+    footer {
+      background-color: #343a40;
+      color: #fff;
+    }
+    .navbar-brand {
+      font-size: 1.5rem;
+    }
+    h1, h5 {
+      color: #333;
+    }
+    .carousel-item img {
+      height: 450px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -30,24 +53,44 @@
   <!-- Hero Section with Carousel -->
   <header class="container mt-4">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <!-- Indicadores -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+      </div>
+
+      <!-- Slides -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/heroe1.jpg.png" alt="Descripción"  alt="Bienestar emocional">
+          <img src="./img/heroe1.jpg" class="d-block w-100" alt="Bienestar emocional">
         </div>
         <div class="carousel-item">
-      <img src="./img/mi_imagen1.png" alt="Descripción"  alt="Sesiones de terapia">
+          <img src="./img/mi_imagen1.png" class="d-block w-100" alt="Sesiones de terapia">
         </div>
         <div class="carousel-item">
-          <img src="img/talleres.jpg" class="d-block w-100" alt="Talleres grupales">
+          <img src="./img/talleres.jpg" class="d-block w-100" alt="Talleres grupales">
         </div>
       </div>
+
+      <!-- Controles -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
     </div>
   </header>
 
   <!-- Descripción del negocio -->
   <section class="container py-5" data-aos="fade-up">
     <h1 class="text-center mb-4">Bienvenido a Mente Sana</h1>
-    <p class="lead text-center">Te acompañamos en tu proceso de crecimiento personal y emocional. Descubre nuestros servicios de psicoterapia individual, talleres de manejo del estrés y sesiones de mindfulness.</p>
+    <p class="lead text-center">
+      Te acompañamos en tu proceso de crecimiento personal y emocional. Descubre nuestros servicios de psicoterapia individual, talleres de manejo del estrés y sesiones de mindfulness.
+    </p>
     <div class="text-center">
       <a href="dofa.html" class="btn btn-primary">Ver Matriz DOFA</a>
     </div>
@@ -61,10 +104,12 @@
     </div>
   </section>
 
-  <footer class="bg-dark text-light text-center py-3">
+  <!-- Footer -->
+  <footer class="text-center py-3">
     &copy; 2025 Mente Sana. Todos los derechos reservados.
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
