--- a/tienda.html
+++ b/tienda.html
@@ -31,7 +31,7 @@
           <div class="card-body">
             <h5 class="card-title">Sesión de Psicoterapia Individual</h5>
             <p class="card-text">Apoyo terapéutico individualizado para tu bienestar emocional.</p>
-            <p><strong>$50 USD</strong></p>
+            <p><strong>$208,506 COP </strong></p>
             <div class="d-flex justify-content-between">
               <a href="https://w.app/mentesana" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
               <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
@@ -46,7 +46,7 @@
           <div class="card-body">
             <h5 class="card-title">Taller de Manejo del Estrés</h5>
             <p class="card-text">Aprende técnicas efectivas para manejar el estrés y la ansiedad.</p>
-            <p><strong>$30 USD</strong></p>
+            <p><strong>$82,157 COP</strong></p>
             <div class="d-flex justify-content-between">
               <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
               <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
@@ -61,7 +61,7 @@
           <div class="card-body">
             <h5 class="card-title">Sesión de Mindfulness</h5>
             <p class="card-text">Meditación guiada para cultivar la atención plena.</p>
-            <p><strong>$20 USD</strong></p>
+            <p><strong>$125,292</strong></p>
             <div class="d-flex justify-content-between">
               <a href="https://wa.me/15551234567?text=Quiero%20reservar%20una%20sesión%20de%20mindfulness" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
               <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
