--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
   <section class="container py-5" data-aos="fade-up">
     <h1 class="text-center mb-4">Bienvenido a Mente Sana</h1>
     <p class="lead text-center">
-      Te acompañamos en tu proceso de crecimiento personal y emocional. Descubre nuestros servicios de psicoterapia individual, talleres de manejo del estrés y sesiones de mindfulness.
+     En Mente Sana, te acompañamos en cada paso de tu proceso de crecimiento personal y emocional. Nuestro equipo de profesionales especializados está comprometido a brindarte apoyo, guía y herramientas prácticas que te permitirán enfrentar los desafíos de la vida con mayor resiliencia y bienestar.
+
+Descubre nuestros servicios de psicoterapia individual, donde te ofrecemos un espacio seguro y confidencial para explorar tus emociones, superar bloqueos y fortalecer tu salud mental. Además, contamos con talleres de manejo del estrés que te ayudarán a desarrollar habilidades para gestionar la ansiedad, mejorar tus relaciones interpersonales y mantener un equilibrio emocional duradero.
+
+
     </p>
     <div class="text-center">
-      <a href="dofa.html" class="btn btn-primary">Ver Matriz DOFA</a>
+    <a href="https://docs.google.com/document/d/1wb2ONwq9vs4gYMq3ezixgUh-OI1rcQDm1rDcCbLkbas/edit?usp=sharing" target="_blank" class="btn btn-primary">Ver Matriz DOFA</a>
+
     </div>
     <div class="mt-4 text-center">
       <h5>Integrantes del grupo:</h5>
