--- a/contacto.html
+++ b/contacto.html
@@ -27,10 +27,10 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <ul class="list-group mb-4">
-          <li class="list-group-item"><strong>Email:</strong> contacto@mentesana.com</li>
-          <li class="list-group-item"><strong>Instagram:</strong> @mentesana_terapia</li>
+          <li class="list-group-item"><strong>Email:</strong> ericksonj2001@gmail.com</li>
+          <li class="list-group-item"><strong>Instagram:</strong> @perrisjr</li>
           <li class="list-group-item"><strong>Facebook:</strong> Mente Sana Psicoterapia</li>
-          <li class="list-group-item"><strong>WhatsApp:</strong> +1 (555) 123-4567</li>
+          <li class="list-group-item"><strong>WhatsApp:</strong> +57 (317) 1971650</li>
         </ul>
         <form>
           <div class="mb-3">
