--- a/tienda.html
+++ b/tienda.html
@@ -4,78 +4,87 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mente Sana | Tienda en Línea</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">🧠 Mente Sana</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="tienda.html">Tienda en línea</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
-  <main class="container py-5">
-    <h1 class="text-center mb-5">Nuestros Servicios</h1>
-    <div class="row g-4">
-      <!-- Servicio 1 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio1.jpg" class="card-img-top" alt="Psicoterapia Individual">
-          <div class="card-body">
-            <h5 class="card-title">Sesión de Psicoterapia Individual</h5>
-            <p class="card-text">Apoyo terapéutico individualizado para tu bienestar emocional.</p>
-            <p><strong>$208,506 COP </strong></p>
-            <div class="d-flex justify-content-between">
-              <a href="https://w.app/mentesana" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Servicio 2 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio2.jpg" class="card-img-top" alt="Taller de Manejo del Estrés">
-          <div class="card-body">
-            <h5 class="card-title">Taller de Manejo del Estrés</h5>
-            <p class="card-text">Aprende técnicas efectivas para manejar el estrés y la ansiedad.</p>
-            <p><strong>$82,157 COP</strong></p>
-            <div class="d-flex justify-content-between">
-                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Servicio 3 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio3.jpg" class="card-img-top" alt="Sesión de Mindfulness">
-          <div class="card-body">
-            <h5 class="card-title">Sesión de Mindfulness</h5>
-            <p class="card-text">Meditación guiada para cultivar la atención plena.</p>
-            <p><strong>$125,292</strong></p>
-            <div class="d-flex justify-content-between">
-                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
-          </div>
-        </div>
-      </div>
+  <header>
+    <div class="logo">
+      <h2>🧠 Mente Sana</h2>
     </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="tienda.html" class="active">Tienda</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <div class="text-container">
+        <h1>Nuestros<br><span>Servicios</span></h1>
+        <p>Descubre nuestras sesiones de psicoterapia, talleres y mindfulness para tu bienestar emocional.</p>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="row">
+        <!-- Servicio 1 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="img/servicio1.jpg" class="card-img-top" alt="Psicoterapia Individual">
+            <div class="card-body">
+              <h5 class="card-title">Sesión de Psicoterapia Individual</h5>
+              <p class="card-text">Apoyo terapéutico individualizado para tu bienestar emocional.</p>
+              <p><strong>$208,506 COP</strong></p>
+              <div class="buttons">
+                <a href="https://w.app/mentesana" target="_blank" class="button">WhatsApp</a>
+                <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="button">Mercado Pago</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Servicio 2 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="img/servicio2.jpg" class="card-img-top" alt="Taller de Manejo del Estrés">
+            <div class="card-body">
+              <h5 class="card-title">Taller de Manejo del Estrés</h5>
+              <p class="card-text">Aprende técnicas efectivas para manejar el estrés y la ansiedad.</p>
+              <p><strong>$82,157 COP</strong></p>
+              <div class="buttons">
+                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="button">WhatsApp</a>
+                <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="button">Mercado Pago</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Servicio 3 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="img/servicio3.jpg" class="card-img-top" alt="Sesión de Mindfulness">
+            <div class="card-body">
+              <h5 class="card-title">Sesión de Mindfulness</h5>
+              <p class="card-text">Meditación guiada para cultivar la atención plena.</p>
+              <p><strong>$125,292 COP</strong></p>
+              <div class="buttons">
+                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="button">WhatsApp</a>
+                <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="button">Mercado Pago</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer class="bg-dark text-light text-center py-3">
-    &copy; 2025 Mente Sana. Todos los derechos reservados.
+  <footer>
+    <p>&copy; 2025 Mente Sana. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
