--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mente Sana | Tienda en Línea</title>
+  <title>Mente Sana | Contacto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -22,52 +22,31 @@
   </nav>
 
   <main class="container py-5">
-    <h1 class="text-center mb-5">Nuestros Servicios</h1>
-    <div class="row g-4">
-      <!-- Servicio 1 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio1.jpg" class="card-img-top" alt="Psicoterapia Individual">
-          <div class="card-body">
-            <h5 class="card-title">Sesión de Psicoterapia Individual</h5>
-            <p class="card-text">Apoyo terapéutico individualizado para tu bienestar emocional.</p>
-            <p><strong>$208,506 COP </strong></p>
-            <div class="d-flex justify-content-between">
-              <a href="https://w.app/mentesana" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
+    <h1 class="text-center mb-4">Contáctanos</h1>
+    <p class="text-center mb-5">Si tienes dudas o quieres más información, contáctanos a través de los siguientes medios:</p>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <ul class="list-group mb-4">
+          <li class="list-group-item"><strong>Email:</strong> contacto@mentesana.com</li>
+          <li class="list-group-item"><strong>Instagram:</strong> @mentesana_terapia</li>
+          <li class="list-group-item"><strong>Facebook:</strong> Mente Sana Psicoterapia</li>
+          <li class="list-group-item"><strong>WhatsApp:</strong> +1 (555) 123-4567</li>
+        </ul>
+        <form>
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" required>
           </div>
-        </div>
-      </div>
-      <!-- Servicio 2 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio2.jpg" class="card-img-top" alt="Taller de Manejo del Estrés">
-          <div class="card-body">
-            <h5 class="card-title">Taller de Manejo del Estrés</h5>
-            <p class="card-text">Aprende técnicas efectivas para manejar el estrés y la ansiedad.</p>
-            <p><strong>$82,157 COP</strong></p>
-            <div class="d-flex justify-content-between">
-                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico:</label>
+            <input type="email" class="form-control" id="email" required>
           </div>
-        </div>
-      </div>
-      <!-- Servicio 3 -->
-      <div class="col-md-4">
-        <div class="card h-100">
-          <img src="img/servicio3.jpg" class="card-img-top" alt="Sesión de Mindfulness">
-          <div class="card-body">
-            <h5 class="card-title">Sesión de Mindfulness</h5>
-            <p class="card-text">Meditación guiada para cultivar la atención plena.</p>
-            <p><strong>$125,292</strong></p>
-            <div class="d-flex justify-content-between">
-                <a href="https://wa.me/15551234567?text=Quiero%20inscribirme%20en%20el%20taller%20de%20estrés" target="_blank" class="btn btn-success">Pagar por WhatsApp</a>
-              <a href="https://www.mercadopago.com.ar/link-de-pago-simulacion" target="_blank" class="btn btn-primary">Pagar por Mercado Pago</a>
-            </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje:</label>
+            <textarea class="form-control" id="mensaje" rows="4" required></textarea>
           </div>
-        </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
       </div>
     </div>
   </main>
@@ -79,5 +58,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
